--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,5 @@
 name = "stacky"
-version = "0.1.0"
+version = "1.0.0"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
@@ -8,7 +8,9 @@ description = "BEAM stack trace in Gleam: a stack trace of stack frames with mod
 licences = ["Apache-2.0"]
 repository = { type = "github", user = "inoas", repo = "stacky" }
 target = "erlang"
+dev-dependencies = { gleeunit = ">= 1.1.2 and < 2.0.0" }
 
 [dependencies]
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
 pprint = ">= 1.0.3 and < 2.0.0"
+gleam_erlang = ">= 0.25.0 and < 1.0.0"
