--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,9 +13,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: erlef/setup-beam@v1
         with:
-          otp-version: "26.2.5"
-          gleam-version: "1.2.0"
+          otp-version: "27.0"
+          gleam-version: "1.2"
           rebar3-version: "3"
       - run: gleam deps download
-      - run: gleam test
+      - run: gleam test --target erlang
       - run: gleam format --check src test
