--- a/gleam.toml
+++ b/gleam.toml
@@ -1,7 +1,7 @@
 name = "stacky"
 version = "1.4.0"
 description = "BEAM stack trace in Gleam: a stack trace of stack frames with module name, function name, arity, file name and line number."
-licences = ["Apache-2.0"]
+licences = ["MPL-2.0"]
 repository = { type = "github", user = "inoas", repo = "stacky" }
 
 gleam = ">= 1.0.0 and < 2.0.0"
